# agentic-sql-analyst

./: .env.example  .gitignore  .railwayignore  HOW_IT_WORKS.md  README.md  environment.yml  pyproject.toml  railway.toml  requirements.txt  snowflake.yml  test_token_count.py
.github/workflows/: ci.yml
app/: agent.py  azure_client.py  config.py  demo_abuse.py  demo_log.py  email_gate.py  guardrails.py  local_data.py  local_session.py  main.py  openai_client.py  privacy.py  skill_loader.py  snowflake_client.py  start_gate.py
app/components/: charts.py  kpi_cards.py  narrative.py
docs/superpowers/plans/: 2026-07-10-railway-demo-mode.md
docs/superpowers/specs/: 2026-07-10-railway-demo-design.md
skills/: SKILL.md
skills/analysis/: SKILL.md  mom-patterns.md
skills/references/: data-model.md  dimensions.md
skills/sql-patterns/: SKILL.md  add-field.md  aggregation.md  comparison.md  diagnostic.md  drilldown.md
tests/: test_agent.py  test_agent_demo.py  test_demo_abuse.py  test_demo_config.py  test_demo_log.py  test_email_gate.py  test_guardrails.py  test_local_data.py  test_local_session.py  test_main_demo.py  test_openai_client.py  test_skill_loader.py
