[project]
name = "agentic-sql-analyst"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "snowflake-connector-python>=3.3.0",
    "streamlit[snowflake]>=1.54.0,<1.60",
    "pandas>=2.0",
    "plotly>=5.0",
    "duckdb>=1.0",
    "openai>=1.40",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ["test_token_count.py"]

[tool.setuptools]
packages = ["app", "app.components"]
